// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display message for multiple expense 1`] = `
<div>
  <h2>
    Viewing 
    5
     
    expenses
     totalling 
    $132.00
  </h2>
</div>
`;

exports[`should display message for single expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $12.00
  </h2>
</div>
`;
